tests/sumo/basic/tls/NEMA/errors/1/errors.sumo
Warning: Vehicle 'SB_R.4' performs emergency braking with decel=-9.00 wished=4.50 severity=1.00, time=44.00.
Warning: Vehicle 'SB_R.6' performs emergency braking with decel=-9.00 wished=4.50 severity=1.00, time=53.00.
Warning: Vehicle 'SB_L.4' performs emergency braking with decel=-9.00 wished=4.50 severity=1.00, time=62.00.
Warning: Vehicle 'SB_R.12' performs emergency braking with decel=-9.00 wished=4.50 severity=1.00, time=128.00.
Warning: Vehicle 'SB_R.13' performs emergency braking with decel=-9.00 wished=4.50 severity=1.00, time=132.00.
Warning: Vehicle 'WB_T.22' performs emergency braking with decel=-9.00 wished=4.50 severity=1.00, time=141.00.
Warning: Vehicle 'SB_R.14' performs emergency braking with decel=-9.00 wished=4.50 severity=1.00, time=151.00.
Warning: Vehicle 'WB_T.32' performs emergency braking with decel=-9.00 wished=4.50 severity=1.00, time=195.00.
Warning: Vehicle 'SB_R.22' performs emergency braking with decel=-9.00 wished=4.50 severity=1.00, time=242.00.
Warning: Vehicle 'SB_L.41' performs emergency braking with decel=-9.00 wished=4.50 severity=1.00, time=283.00.
Warning: Vehicle 'WB_T.55' performs emergency braking with decel=-9.00 wished=4.50 severity=1.00, time=290.00.
Warning: Vehicle 'SB_R.28' performs emergency braking with decel=-9.00 wished=4.50 severity=1.00, time=306.00.
Warning: Teleporting vehicle 'EB_T.0'; waited too long (yield), lane='-16480_0', time=316.00.
Warning: Vehicle 'EB_T.0' ends teleporting on edge '-17276', time 316.00.
Warning: Vehicle 'WB_T.60' performs emergency braking with decel=-9.00 wished=4.50 severity=1.00, time=319.00.
Warning: Teleporting vehicle 'EB_T.1'; waited too long (yield), lane='-16480_0', time=319.00.
Warning: Vehicle 'EB_T.1' ends teleporting on edge '-17276', time 319.00.
Warning: Teleporting vehicle 'WB_L.0'; waited too long (yield), lane='17276_2', time=322.00.
Warning: Vehicle 'WB_L.0' ends teleporting on edge '-16037', time 322.00.
Warning: Teleporting vehicle 'WB_L.1'; waited too long (yield), lane='17276_3', time=349.00.
Warning: Vehicle 'WB_L.1' ends teleporting on edge '-16037', time 349.00.
Warning: Vehicle 'SB_R.38' performs emergency braking with decel=-9.00 wished=4.50 severity=1.00, time=417.00.
Warning: Vehicle 'WB_T.81' performs emergency braking with decel=-9.00 wished=4.50 severity=1.00, time=424.00.
Warning: Vehicle 'SB_R.41' performs emergency braking with decel=-9.00 wished=4.50 severity=1.00, time=437.00.
Warning: Vehicle 'WB_T.86' performs emergency braking with decel=-9.00 wished=4.50 severity=1.00, time=456.00.
Warning: Vehicle 'SB_R.43' performs emergency braking with decel=-9.00 wished=4.50 severity=1.00, time=456.00.
